SIA: some debugging

--- a/app/views/query/imagesearch.html.erb
+++ b/app/views/query/imagesearch.html.erb
@@ -1,6 +1,5 @@
 <%= javascript_include_tag "form_options/option" %>
 <%= javascript_include_tag "form_options/size_panel" %>
-
 <!--=== Breadcrumbs ===-->
 <div class="breadcrumbs margin-bottom-40">
   <div class="container">
@@ -25,7 +24,7 @@
       <li><a href="#query_result" data-toggle="tab">Query Results</a></li>               
     </ul>
     <div class="tab-content">
-      <div class="tab-pane" id="query_form">
+      <div class="tab-pane active" id="query_form">
         <%= render 'query/simple_image_search/query_form' %>
       </div>
 
