Adding conssoto workshop news

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -43,6 +43,23 @@
       <div class="thumbnails thumbnail-style thumbnail-kenburn">
         <div class="thumbnail-img">
           <div class="overflow-hidden">
+            <%= image_tag "news/workshop_august_2014_1.jpg", class: 'img-responsive' %>
+          </div>
+          <%= link_to "read more +", workshop_august_2014_path, class: "btn-more hover-effect" %>   
+        </div>
+        <div class="caption">
+          <h3><%= link_to "Workshop 2014 Avances y desafíos del proyecto FONDEF D11I1060", workshop_august_2014_path %></h3>
+          <div align="justify">
+            <p>El Observatorio Virtual Chileno (ChiVO) es uno de los proyectos actualmente en curso en el mundo que busca contener los datos astronómicos en sistema transparente, permitiendo que la información esté a disposición de todos los investigadores, independiente de su...</p>
+          </div>
+        </div>
+      </div>
+    </div> 
+    <!-- New 2 -->
+    <div class="col-md-4 col-sm-6">
+      <div class="thumbnails thumbnail-style thumbnail-kenburn">
+        <div class="thumbnail-img">
+          <div class="overflow-hidden">
             <%= image_tag "news/spie_astronomical_telescopes_instrumentation_2014_2.jpg", class: 'img-responsive' %>
           </div>
           <%= link_to "read more +", spie_astronomical_telescopes_instrumentation_2014_path, class: "btn-more hover-effect" %>   
@@ -55,7 +72,7 @@
         </div>
       </div>
     </div> 
-    <!-- New 2 -->
+    <!-- New 3 -->
     <div class="col-md-4 col-sm-6">
       <div class="thumbnails thumbnail-style thumbnail-kenburn">
         <div class="thumbnail-img">
@@ -69,23 +86,6 @@
           <div align="justify">
             <p>The May 2014 issue of the IVOA Newsletter is now available. This biannual newsletter for astronomers is intended to highlight new capabilities of VO tools and technologies for doing astronomy research. It also lists recent papers and upcoming events. </p>
           </div>        
-        </div>
-      </div>
-    </div>
-    <!-- New 3 -->
-    <div class="col-md-4 col-sm-6">
-      <div class="thumbnails thumbnail-style thumbnail-kenburn">
-        <div class="thumbnail-img">
-          <div class="overflow-hidden">
-            <%= image_tag "news/chilean_development_of_astronomical_computing_for_alma.jpg", class: 'img-responsive' %>
-          </div>
-          <%= link_to "read more +", chilean_development_of_astronomical_computing_for_alma_path, class: "btn-more hover-effect" %>    
-        </div>
-        <div class="caption">          
-          <h3><%= link_to "Chilean Development of Astronomical Computing for ALMA", chilean_development_of_astronomical_computing_for_alma_path %></h3>
-          <div align="justify">
-            <p>Once the Atacama Large Millimiter/submillimeter Array (ALMA) is functioning at full capacity, it will generate more than 750 GB of data each day (on the order of 250 TB/year). Chilean astronomers will need to be able to connect at a high data transmission speed...</p>
-          </div>
         </div>
       </div>
     </div>
