query_result SIAP VOTable

--- a/app/views/query/simple_cone_search/_position.html.erb
+++ b/app/views/query/simple_cone_search/_position.html.erb
@@ -82,7 +82,7 @@
 			<strong>Description</strong> 
 			<p>Declination, +Degrees:Minutes:Seconds</p><br>
 			<strong>Unit</strong> 
-			<p>Degrees:Minutes:Seconds</p><br>	
+			<p>Degrees:Arcminutes:Arcseconds</p><br>	
 			<strong>Example</strong> 
 			<p>+38:01:35.7</p>
 			<p>+38.0266111</p>
