Set RA-Dec Tooltips

--- a/app/views/query/_pop_boxes.html.erb
+++ b/app/views/query/_pop_boxes.html.erb
@@ -7,4 +7,44 @@
 	<strong>Example</strong> 
 	<p>L-List of examples</p>              
 </div>
+
+<div id="ra" class="popbox">
+	<strong>RA</strong> 
+	<p>Right Ascension</p> 
+	<strong>Description</strong> 
+	<p> Right Ascension (RA) either in decimal degrees, or in 
+		Hours:Minutes:Seconds</p> 
+	<strong>Unit</strong> 
+	<p>Hours:Minutes:Seconds and Degrees:Minutes:Seconds</p>
+	<strong>Example</strong> 
+	<p>04:18:21.27</p>
+	<p>064.5886550</p>
+	<p>04:18:21.27</p>
+	<p>064.5886550</p>             
+</div>
+
+<div id="dec" class="popbox">
+	<strong>Dec</strong> 
+	<p>Declination</p>
+	<strong>Description</strong> 
+	<p>Declination, +Degrees:Minutes:Seconds</p>
+	<strong>Unit</strong> 
+	<p>Degrees:Arcminutes:Arcseconds</p>
+	<strong>Example</strong> 
+	<p>+38:01:35.7</p>
+	<p>+38.0266111</p>
+	<p>+38.0266111</p>
+	<p>+38:01:35.7</p>        
+</div>
+
+<div id="ang_size" class="popbox">
+	<strong>ANG</strong> 
+	<p>Description of control label</p> 
+	<strong>Unit</strong> 
+	<p>Unit of measure</p>
+	<strong>Example</strong> 
+	<p>L-List of examples</p>              
+</div>
 <!--=== End Pop Boxes ===-->
+
+			
