--- a/app/views/query/simple_image_search/_query_form.html.erb
+++ b/app/views/query/simple_image_search/_query_form.html.erb
@@ -5,19 +5,19 @@
   <%= form_tag "/query/imagesearch", remote: true, class: 'form-horizontal', role: 'form', method: 'get' , name: 'searchForm', id: 'queryForm' do %>
     <div class="form-group">
       <%= label_tag :ra, 'RA', class: 'col-sm-4 control-label' %>
-      <div class="col-sm-5" data-popbox='default'>
+      <div class="col-sm-5" data-popbox='ra'>
         <%= text_field_tag :ra, nil, class: 'form-control' %>
       </div>
     </div>
     <div class="form-group">
       <%= label_tag :dec, 'DEC', class: 'col-sm-4 control-label' %>
-      <div class="col-sm-5"  data-popbox='default'>
+      <div class="col-sm-5"  data-popbox='dec'>
           <%= text_field_tag :dec, nil, class: 'form-control' %>
       </div>
     </div>
     <div class="form-group">
       <%= label_tag :size, 'Angular Size', class: 'col-sm-4 control-label' %>
-      <div class="col-sm-5" data-popbox='default'>
+      <div class="col-sm-5" data-popbox='ang_size'>
           <%= text_field_tag :size, nil, class: 'form-control' %>
       </div>
     </div>
