--- a/app/views/news/spie_astronomical_telescopes_instrumentation_2014.html.erb
+++ b/app/views/news/spie_astronomical_telescopes_instrumentation_2014.html.erb
@@ -107,6 +107,12 @@
             <div class="posts margin-bottom-40">
                 <div class="headline headline-md"><h2>Recent News</h2></div>
                 <dl class="dl-horizontal">
+                    <dt><%= image_tag "news/workshop_august_2014.jpg", class: "img-responsive"%></dt>
+                    <dd>
+                        <p><%= link_to "Workshop 2014 Avances y desafíos del proyecto FONDEF D11I1060", workshop_august_2014_path %></p> 
+                    </dd>
+                </dl>
+                <dl class="dl-horizontal">
                     <dt><%= image_tag "news/ivoa_newsletter_012_may_2014.jpg", class: "img-responsive"%></dt>
                     <dd>
                         <p><%= link_to "IVOA Newsletter 012 - May 2014", ivoa_newsletter_012_may_2014_path %></p> 
