filters on query results fixed

--- a/app/views/query/simple_image_search/add_query.js.erb
+++ b/app/views/query/simple_image_search/add_query.js.erb
@@ -30,7 +30,7 @@ if (!has_error) {
 		id: 'multi_select_resource'+id,
 		multiple: 'multiple',
 		style: 'float:center',
-		name: 'query_'+id+'[]'
+		name: 'resource_'+id+'[]'
 	});
 
 	var delete_button = $('<a/>',
