SSA: query controller updated

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,7 +97,7 @@
                 <%= link_to 'Image Search', query_imagesearch_path %>
               </li>
               <li>
-                <%= link_to 'Spectral Search', '#', style: "cursor:Default; text-decoration:none; color:#D0D0D0;" %>
+                <%= link_to 'Spectral Search', query_spectralsearch_path %>
               </li>
               <li>
                 <%= link_to 'Table Search', '#', style: "cursor:Default; text-decoration:none; color:#D0D0D0;"%>
