SSA: html from SIA + fix

--- a/app/views/query/spectralsearch.html.erb
+++ b/app/views/query/spectralsearch.html.erb
@@ -3,11 +3,11 @@
 <!--=== Breadcrumbs ===-->
 <div class="breadcrumbs margin-bottom-40">
   <div class="container">
-    <h1 class="pull-left">Simple Image Search</h1>
+    <h1 class="pull-left">Simple Spectral Search</h1>
     <ul class="pull-right breadcrumb">
       <li><%= link_to 'Home', root_path %></li>
       <li>Services</li>
-      <li class="active">Simple Image Search</li>
+      <li class="active">Simple Spectral Search</li>
     </ul>
   </div><!--/container-->
 </div><!--/breadcrumbs-->
