Agregado Sesame search en todas las busquedas implementadas hasta ahora

--- a/app/views/query/_pop_boxes.html.erb
+++ b/app/views/query/_pop_boxes.html.erb
@@ -7,6 +7,17 @@
 	<strong>Example</strong> 
 	<p>L-List of examples</p>              
 </div>
+<div id="source_name_sesame" class="popbox">
+	<strong>Souce name (Sesame)</strong> 
+	<p>Source name to be resolved with <a href="http://cdsweb.u-strasbg.fr/cgi-bin/Sesame" target="_blank">Sesame</a></p><br>
+	<strong>Description</strong> 
+	<p>We use the external resolver Sesame to obtain
+			coordinates for the source. Sesame queries the Simbad,
+			NED and VizieR services.</p><br>
+	<strong>Example</strong> 
+	<p>M87</p>
+	<p>NGC3375</p>
+</div>
 
 <div id="ra" class="popbox">
 	<strong>RA</strong> 
