--- a/app/views/query/imagesearch.html.erb
+++ b/app/views/query/imagesearch.html.erb
@@ -1,5 +1,7 @@
 <%= javascript_include_tag "form_options/option" %>
 <%= javascript_include_tag "form_options/size_panel" %>
+<%= javascript_include_tag "services/simple_cone_search" %>
+
 <!--=== Breadcrumbs ===-->
 <div class="breadcrumbs margin-bottom-40">
   <div class="container">
