--- a/app/views/query/conesearch.html.erb
+++ b/app/views/query/conesearch.html.erb
@@ -1,9 +1,11 @@
 <%= javascript_include_tag "services/simple_cone_search" %>
+<%= javascript_include_tag "form_options/option" %>
+<%= javascript_include_tag "form_options/size_panel" %>
 
 <!--=== Breadcrumbs ===-->
 <div class="breadcrumbs margin-bottom-40">
   <div class="container">
-      <h1 class="pull-left">Search</h1>
+      <h1 class="pull-left">Simple Cone Search</h1>
       <ul class="pull-right breadcrumb">
           <li><%= link_to 'Home', root_path %></li>
           <li>Services</li>
@@ -13,15 +15,21 @@
 </div><!--/breadcrumbs-->
 <!--=== End Breadcrumbs ===-->
 
+<%= render 'pop_boxes' %>
+
 <div class="container"> <!--== Content Part ==-->                   
   <div class="tab-v2 col-sm-12" style="margin-left:50px;">                
     <ul class="nav nav-tabs">         
-      <li class="active" ><a href="#query_form" data-toggle="tab">Query Form</a></li>     
+      <li class="active" ><a href="#query_form" data-toggle="tab">Query Form</a></li>
+      <li><a href="#query_list" data-toggle="tab">Query List</a></li>    
       <li><a href="#result_table" data-toggle="tab">Result Table</a></li>               
     </ul>
     <div class="tab-content">
       <div class="tab-pane active" id="query_form" >
         <%= render 'query/simple_cone_search/query_form' %>
+      </div>
+      <div class="tab-pane" id="query_list">
+        <%= render 'query/simple_cone_search/query_list' %>
       </div>
       <div class="tab-pane" id="result_table">
         <%= render 'query/simple_cone_search/result_table' %>
