SSA: query working

--- a/app/views/query/simple_spectral_search/_query_form.html.erb
+++ b/app/views/query/simple_spectral_search/_query_form.html.erb
@@ -4,7 +4,7 @@
 </div>
  <div class="panel-body" id="query-form-panel-body">                    
   <!--=== Form ===-->
-  <%= form_tag "/query/imagesearch", remote: true, class: 'form-horizontal', role: 'form', method: 'get' , name: 'searchForm', id: 'queryForm' do %>
+  <%= form_tag "/query/spectralsearch", remote: true, class: 'form-horizontal', role: 'form', method: 'get' , name: 'searchForm', id: 'queryForm' do %>
     
     <!-- SESAME -->
     <div class="form-group">
