--- a/app/views/query/simple_spectral_search/_query_list.html.erb
+++ b/app/views/query/simple_spectral_search/_query_list.html.erb
@@ -2,7 +2,7 @@
 <div id="list-panel-body" class="panel-body">                    
 	
 	<!--=== Form ===-->
-  <%= form_tag "/query/imagesearch", remote: true, class: 'form-horizontal', role: 'form', method: 'get' , name: 'searchForm' do %>
+  <%= form_tag "/query/spectralsearch", remote: true, class: 'form-horizontal', role: 'form', method: 'get' , name: 'searchForm' do %>
 		<i id="estate_process_query_list" class="" style="display:inline-block; margin-left:10px;"></i>
 		<table id="query_list_table" class="table">
 			<thead>
