--- a/app/views/query/simple_cone_search/_query_form.html.erb
+++ b/app/views/query/simple_cone_search/_query_form.html.erb
@@ -58,11 +58,11 @@
 	</div>
 	<% end %>
 
-	<div class="form-group">
+<!-- 	<div class="form-group">
 		<div class="col-sm-offset-4 col-sm-5">
 				<%= submit_tag 'Add Query', class: 'btn btn-default btn-block' %>
 		</div>
-	</div>
+	</div> -->
 </div>
 
 <!--=== End Form ===-->   
