--- a/app/views/query/simple_image_search/_query_form.html.erb
+++ b/app/views/query/simple_image_search/_query_form.html.erb
@@ -120,4 +120,18 @@
 			</div>
 		</div>
 	<% end %> <!--=== End Form ===-->   
+
+	<%= form_tag "/query/imagesearch", multipart: true, remote: true, class: 'form-horizontal', method: 'post', role: 'form', name: 'csv', id: 'csvForm' do %>
+	<div class="form-group">
+		<%= label_tag :file, 'CSV File', class: 'col-sm-4 control-label' %>
+		<div class="col-sm-5" data-popbox='csv'>
+		<%=file_field_tag :file, class: 'form-control'%>
+		</div>
+	</div>
+	<div class="form-group">
+			<div class="col-sm-offset-4 col-sm-5">
+					<%= submit_tag 'Add File to Query', class: 'btn btn-default btn-block' %>
+			</div>
+		</div>
+	<% end %> <!--=== End CSV Form ===-->   
 </div>
